--- a/src/MSetExplorer/Explorer/ExplorerWindow.xaml
+++ b/src/MSetExplorer/Explorer/ExplorerWindow.xaml
@@ -156,13 +156,22 @@
                             <!--<RowDefinition Height="*" />-->
                         </Grid.RowDefinitions>
 
-                        <TextBlock Text="W:" Grid.Row="0" Grid.RowSpan="2" Margin="0,7,0,3" Height="21" HorizontalAlignment="Center" />
-                        <TextBox x:Name="txtW" Grid.Row="0" Grid.Column="1"  Grid.RowSpan="2" Margin="3,10" Text="{Binding ElementName=mapDisplay1, Path=ActualWidth, StringFormat=F2, Mode=OneWay}"/>
+                        <TextBlock Text="W:" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Margin="0,7,0,3" Height="21" HorizontalAlignment="Center" />
+                        
+                        <!--<TextBox x:Name="txtW" Grid.Row="0" Grid.Column="1"  Grid.RowSpan="2" Margin="3,0" Text="{Binding ElementName=mapDisplay1, Path=ActualWidth, StringFormat=F2, Mode=OneWay}"/>-->
+                        <TextBox x:Name="txtW" Grid.Row="0" Grid.Column="1"  Grid.RowSpan="2" Margin="3,0" Text="{Binding MapDisplayViewModel.ViewportSize.Width, StringFormat=F2, Mode=OneWay}"/>
+                        <TextBox x:Name="txtW2" Grid.Row="1" Grid.Column="1"  Grid.RowSpan="2" Margin="3,0" Text="{Binding DispWidth, StringFormat=F2, Mode=OneWay}"/>
+
                         <Button Grid.Row="0" Grid.Column="2" Margin="2" Click="W_Up_Button_Click">U</Button>
                         <Button Grid.Row="1" Grid.Column="2" Margin="2" Click="W_Down_Button_Click">D</Button>
 
-                        <TextBlock Text="H:" Grid.Row="2" Grid.RowSpan="2" Margin="0,7,0,3" Height="21" HorizontalAlignment="Center" />
-                        <TextBox x:Name="txtH" Grid.Row="2" Grid.RowSpan="2" Grid.Column="1" Margin="3,10" Text="{Binding ElementName=mapDisplay1, Path=ActualWidth, StringFormat=F2, Mode=OneWay}" />
+                        <TextBlock Text="H:" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2" Margin="0,7,0,3" Height="21" HorizontalAlignment="Center" />
+
+                        <!--<TextBox x:Name="txtH" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="3,0" Text="{Binding ElementName=mapDisplay1, Path=ActualHeight, StringFormat=F2, Mode=OneWay}" />-->
+                        <TextBox x:Name="txtH" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" Margin="3,0" Text="{Binding MapDisplayViewModel.ViewportSize.Height, StringFormat=F2, Mode=OneWay}" />
+                        <TextBox x:Name="txtH2" Grid.Row="3" Grid.Column="1" Grid.RowSpan="2" Margin="3,0" Text="{Binding DispHeight, StringFormat=F2, Mode=OneWay}" />
+
+
                         <Button Grid.Row="2" Grid.Column="2" Margin="2" Click="H_Up_Button_Click">U</Button>
                         <Button Grid.Row="3" Grid.Column="2" Margin="2" Click="H_Down_Button_Click">D</Button>
 
