--- a/src/MSetExplorer/CreateImage/CreateImageDialog.xaml
+++ b/src/MSetExplorer/CreateImage/CreateImageDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=local:CreateImageViewModel}"
-        Title="Create Image" Height="165" Width="550">
+        Title="Create Image" Height="205" Width="550">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -26,6 +26,15 @@
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,5">
                     <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="Name:" VerticalAlignment="Top"/>
                     <TextBox x:Name="txtFileName" Text="{Binding ImageFileName}" Width="200" Height="22"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Margin="0,5">
+                    <TextBlock Width="50" Margin="10,0,5,0" FontSize="16" Text="Type:" VerticalAlignment="Top"/>
+                    
+                    <ComboBox Width="100"
+                              ItemsSource="{Binding ImageTypes, Mode=OneTime}"
+                              SelectedItem="{Binding SelectedImageType}"/>
+
                 </StackPanel>
 
             </StackPanel>
