--- a/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
+++ b/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
@@ -6,7 +6,7 @@
              xmlns:ScottPlot="clr-namespace:ScottPlot;assembly=ScottPlot.WPF"                           
              xmlns:local="clr-namespace:MSetExplorer" d:DataContext="{d:DesignInstance Type=local:CbsHistogramViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="242" d:DesignWidth="1290">
+             d:DesignHeight="255" d:DesignWidth="1290">
 
     <UserControl.CommandBindings>
         <CommandBinding Command="local:ColorBandSetCommands.Revert" CanExecute="RevertCommand_CanExecute" Executed="RevertCommand_Executed" />
@@ -28,7 +28,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="290"/>
+                    <ColumnDefinition Width="295"/>
                 </Grid.ColumnDefinitions>
 
                 <Border Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" BorderThickness="0, 0, 0.75, 0" BorderBrush="Black" VerticalAlignment="Stretch">
@@ -44,7 +44,7 @@
                     />
                 </Border>
 
-                <Border x:Name="ColorBandAreaBorder" Grid.Row="1" Grid.Column="1" BorderThickness="0.75" BorderBrush="Black" Margin="10,0,10,2">
+                <Border x:Name="ColorBandAreaBorder" Grid.Row="1" Grid.Column="1" BorderThickness="0.75" BorderBrush="Black" Margin="10,0,10,5">
                     
                     <ScrollViewer
                         x:Name="ScrollViewer1"
@@ -62,6 +62,7 @@
 
                             <local:HistogramColorBandControl
                                 x:Name="HistogramColorBandControl1"
+                                CurrentColorBand="{Binding CurrentColorBand}"
                             />
 
                         </local:PanAndZoomControl>
@@ -69,18 +70,36 @@
 
                 </Border>
 
-                <Border x:Name="ColorBandDetail" Grid.Row="0" Grid.RowSpan="2"  Grid.Column="2" BorderThickness="0.75, 0, 0, 0" BorderBrush="Black">
+                <Border x:Name="ColorBandDetail" Grid.Row="0" Grid.RowSpan="2"  Grid.Column="2" BorderThickness="0.75" BorderBrush="Black" Margin="0,10,10,5">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="180"/>
                             <RowDefinition Height="*"/>
+                            <RowDefinition Height="75"/>
+                            <RowDefinition Height="33"/>
+                            <RowDefinition Height="30"/>
+
                         </Grid.RowDefinitions>
 
-                        <Border Grid.Row="0" BorderThickness="0, 0.75, 0, 0.75" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,60,0,0">
+                        <Border Grid.Row="0" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="0">
+
+                            <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,3">
+                                
+                                <TextBlock Height="21" Margin="5" FontSize="14" Text="Color Band #:" />
+                                <TextBox Text="{Binding Path=CurrentColorBandIndex, Mode=OneWay}"  Width="30" Height="21" VerticalAlignment="Center" Margin="0,3"/>
+                                
+                                <TextBlock Height="21" Margin="5" FontSize="14" Text="of" />
+                                <TextBox Text="{Binding Path=ColorBandsCount, Mode=OneWay}"  Width="30" Height="21" VerticalAlignment="Center" Margin="0,3"/>
+                                
+                                <!--<TextBlock Height="21" Margin="5" FontSize="14" Text="total" />-->
+                            </StackPanel>
+
+                        </Border>
+
+                        <Border Grid.Row="1" BorderThickness="0, 0.75, 0, 0.75" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0">
                             <local:ColorBandUserControl x:Name="clrBandDetail" Margin="0,10, 0, 0" />
                         </Border>
 
-                        <Border Grid.Row="1" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0">
+                        <Border Grid.Row="2" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0">
 
                             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0,3">
                                 <Button Name="btnRevert" HorizontalAlignment="Center" Width="55" FontSize="14" Height="23" Margin="8,0" Command="local:ColorBandSetCommands.Revert">Revert</Button>
@@ -90,7 +109,13 @@
                             </StackPanel>
 
                         </Border>
-                        
+
+                        <Border Grid.Row="3" BorderThickness="0,0.75,0,0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0">
+                            <Border BorderThickness="0" Margin="0,3">
+                                <local:UndoPileControl x:Name="undoRedo1" />
+                            </Border>
+                        </Border>
+
                     </Grid>
                 </Border>
             </Grid>
@@ -99,18 +124,4 @@
     </Grid>
 </UserControl>
     
-    <!-- 
-        
-        <local:HistogramPlotCustomControl
-            x:Name="HistogramDisplayControl1"
-            SeriesData="{Binding SeriesData, Mode=OneWay}"
-            HistogramImageSource="{Binding ImageSource, Mode=OneWay}"
-            ImageOffset="{Binding ImageOffset, Mode=OneWay}"
-        />        
 
-        <local:HistogramColorBandControl
-            x:Name="HistogramColorBandControl1"
-            HistogramImageSource="{Binding ImageSource, Mode=OneWay}"
-        />
-        
-    -->
