--- a/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
+++ b/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
@@ -82,21 +82,34 @@
 
                         <Border Grid.Row="0" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="0">
 
-                            <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,3">
+                            <StackPanel Orientation="Vertical" >
                                 
-                                <TextBlock Height="21" Margin="5" FontSize="14" Text="Color Band #:" />
-                                <TextBox Text="{Binding Path=CurrentColorBandIndex, Mode=OneWay}"  Width="30" Height="21" VerticalAlignment="Center" Margin="0,3"/>
+                                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0,3">
+                                    <TextBlock Height="21" Margin="5,5,5,0" FontSize="14" Text="Color Band #:" />
+                                    <TextBox Text="{Binding Path=CurrentColorBandNumber, Mode=OneWay}"  Width="30" Height="21" VerticalAlignment="Center" Margin="0,3"/>
                                 
-                                <TextBlock Height="21" Margin="5" FontSize="14" Text="of" />
-                                <TextBox Text="{Binding Path=ColorBandsCount, Mode=OneWay}"  Width="30" Height="21" VerticalAlignment="Center" Margin="0,3"/>
+                                    <TextBlock Height="21" Margin="5,5,5,0" FontSize="14" Text="of" />
+                                    <TextBox Text="{Binding Path=ColorBandsCount, Mode=OneWay}"  Width="30" Height="21" VerticalAlignment="Center" Margin="0,3"/>
                                 
-                                <!--<TextBlock Height="21" Margin="5" FontSize="14" Text="total" />-->
+                                    <!--<TextBlock Height="21" Margin="5" FontSize="14" Text="total" />-->
+                                </StackPanel>
+
+                                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0,3">
+                                    <Button Width="70" Margin="0,0,10,0" Content="&lt; L" Click="MoveLeftButton_Click" />
+                                    <Button Width="70" Content="R &gt;" Click="MoveRightButton_Click" />
+                                </StackPanel>
+
+                                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0,3">
+                                    <TextBlock Height="21" Margin="5,0" FontSize="14" Text="Percentage:" />
+                                    <TextBox Text="{Binding Path=CurrentColorBand.Percentage, Mode=OneWay}"  Width="50" Height="21" VerticalAlignment="Center" Margin="0,3"/>
+                                </StackPanel>
+
                             </StackPanel>
 
                         </Border>
 
                         <Border Grid.Row="1" BorderThickness="0, 0.75, 0, 0.75" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0">
-                            <local:ColorBandUserControl x:Name="clrBandDetail" Margin="0,10, 0, 0" />
+                            <local:ColorBandUserControl x:Name="clrBandDetail" Margin="0,5,0,0" />
                         </Border>
 
                         <Border Grid.Row="2" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0">
