Removed the Image property from the HistogramColorBandControl

--- a/src/MSetExplorer/Themes/Generic.xaml
+++ b/src/MSetExplorer/Themes/Generic.xaml
@@ -70,7 +70,7 @@
                             <ContentPresenter.Content>
                                 <Canvas x:Name="MainCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Background="Transparent">
                                     
-                                    <Image x:Name="MainImage" />
+                                    <!--<Image x:Name="MainImage" />-->
                                 </Canvas>
                             </ContentPresenter.Content>
                         </ContentPresenter>
