--- a/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
@@ -19,7 +19,7 @@
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock Width="59" Margin="5,5,11,3" FontSize="14" Text="Cut Off:" />
-                <TextBox Text="{Binding Path=CurrentColorBand.Cutoff, Mode=TwoWay}"  Width="50" Height="21" VerticalAlignment="Center" Margin="0,5,0,3"/>
+                <TextBox x:Name="txtCutoff" Text="{Binding Path=CurrentColorBand.Cutoff, Mode=TwoWay, ValidatesOnExceptions=True, NotifyOnValidationError=True}"  Width="50" Height="21" VerticalAlignment="Center" Margin="0,5,0,3"/>
 
                 <TextBlock Width="77" Margin="8,5,5,3" FontSize="14" Text="Blend Style:" />
 
