--- a/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
+++ b/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
@@ -17,11 +17,11 @@
 
     </UserControl.CommandBindings>
 
-    <Grid>
+    <Grid Background="Transparent">
         <Border BorderThickness="0.75" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Grid>
+            <Grid Background="Transparent">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="180"/>
+                    <RowDefinition Height="160"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 
@@ -44,7 +44,7 @@
                     />
                 </Border>
 
-                <Border x:Name="ColorBandAreaBorder" Grid.Row="1" Grid.Column="1" BorderThickness="0.75" BorderBrush="Black" Margin="10,0,10,5">
+                <Border x:Name="ColorBandAreaBorder" Grid.Row="1" Grid.Column="1" BorderThickness="1" BorderBrush="Peru" Margin="10,0,10,5">
                     
                     <ScrollViewer
                         x:Name="ScrollViewer1"
@@ -71,7 +71,7 @@
                 </Border>
 
                 <Border x:Name="ColorBandDetail" Grid.Row="0" Grid.RowSpan="2"  Grid.Column="2" BorderThickness="0.75" BorderBrush="Black" Margin="0,10,10,5">
-                    <Grid>
+                    <Grid Background="Transparent">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="75"/>
